fixed the space in about section and added link for ieee profile in contact. Done and ready to deploy

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       </div>
     </nav>
 
-    <main class="pt-16">
+    <main>
       <!-- Hero Section -->
-      <section id="about" class="min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8">
+      <section id="about" class="min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 pt-16">
         <div class="max-w-4xl mx-auto text-center">
           <div class="mb-8" data-aos="fade-up">
             <div class="relative mx-auto" style="width: 192px; height: 192px;">
@@ -803,7 +803,7 @@
                       <span class="text-white font-medium text-sm">Medium</span>
                     </a>
 
-                    <a href="#" target="_blank" class="social-link group flex flex-col items-center p-4 bg-gray-700/30 rounded-xl hover:bg-primary/10 transition-all duration-300 border border-gray-600/30 hover:border-primary/50">
+                    <a href="https://ieeexplore.ieee.org/author/552667824650839" target="_blank" class="social-link group flex flex-col items-center p-4 bg-gray-700/30 rounded-xl hover:bg-primary/10 transition-all duration-300 border border-gray-600/30 hover:border-primary/50">
                       <svg class="w-6 h-6 text-primary mb-2 group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.746 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
                       </svg>
@@ -821,14 +821,8 @@
     <!-- Footer -->
     <footer class="bg-gray-900/95 border-t border-gray-800 py-8 px-4 sm:px-6 lg:px-8">
       <div class="max-w-7xl mx-auto">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-          <div class="mb-4 md:mb-0">
-            <p class="text-gray-400">© 2024 Atharv Tembhurnikar. All rights reserved.</p>
-          </div>
-          <div class="flex space-x-6">
-            <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300">Privacy Policy</a>
-            <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300">Terms of Service</a>
-          </div>
+        <div class="text-center">
+          <p class="text-gray-400">© 2025 Atharv Tembhurnikar. All rights reserved.</p>
         </div>
       </div>
     </footer>
